Adding a team editor feature (not complete)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.0/angular-route.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.0/ui-bootstrap-tpls.min.js"></script>
   <script src="js/lib/angular-local-storage.min.js"></script>
+  
+  <script src="js/lib/hammer.min.js"></script>
+  <script src="js/lib/angular-hammer.min.js"></script>
   <script src="js/lib/ng-sortable.min.js"></script>
   
   <script src="js/app/core/core.module.js"></script>
@@ -42,6 +45,9 @@
   <script src="js/app/lineup/lineup.module.js"></script>
   <script src="js/app/lineup/team-lineup.directive.js"></script>
   <script src="js/app/lineup/lineup.controller.js"></script>
+  
+  <script src="js/app/team/team.module.js"></script>
+  <script src="js/app/team/team.controller.js"></script>
   
   <script src="js/app/game/game.module.js"></script>
   <script src="js/app/game/game.controller.js"></script>
