--- a/js/app/lineup/team-lineup.html
+++ b/js/app/lineup/team-lineup.html
@@ -5,17 +5,18 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Number</th>
-                <th colspan="2">Name</th>
+                <th>&nbsp;</th>
+                <th>Batting</th>
+                <th>Name</th>
             </tr>
         </thead>
         <tbody data-as-sortable="vm.dragControlListeners" ng-model="vm.players">
             <tr ng-repeat="player in vm.players" data-as-sortable-item>
-                <td>{{ player.num }}</td>
-                <td>{{ player.name }}</td>
                 <td data-as-sortable-item-handle>
                     <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
                 </td>
+                <td>{{$index + 1}}</td>
+                <td hm-press="vm.editPlayer(player)">({{ player.num }}) {{ player.name }}</td>
             </tr>
         </tbody>
     </table>
