--- a/client/app/game/new-game.html
+++ b/client/app/game/new-game.html
@@ -2,15 +2,15 @@
 <form name="newGame" novalidate ng-submit="vm.submit()">
     <div class="form-group" ng-class="{'has-error': newGame.awayTeam.$invalid && (newGame.awayTeam.$dirty || newGame.awayTeam.$touched)}">
         <label for="awayTeam">Away Team</label>
-        <input required type="text" id="awayTeam" name="awayTeam" class="form-control" placeholder="Enter the away team name..." ng-model="vm.awayTeam.name" />
+        <select required ng-options="option.name for option in vm.availableTeams track by team.id" ng-model="vm.awayTeam"></select>
         <div class="help-block has-error" ng-show="newGame.awayTeam.$invalid && (newGame.awayTeam.$dirty || newGame.awayTeam.$touched)">The away team name is required.</div>
     </div>
     
     <div class="form-group" ng-class="{'has-error': newGame.homeTeam.$invalid && (newGame.homeTeam.$dirty || newGame.homeTeam.$touched)}">
         <label for="homeTeam">Home Team</label>
-        <input required type="text" id="homeTeam" name="homeTeam" class="form-control" placeholder="Enter home team name..." ng-model="vm.homeTeam.name" />
+        <select required ng-options="option.name for option in vm.availableTeams track by team.id" ng-model="vm.homeTeam"></select>
         <div class="help-block has-error" ng-show="newGame.homeTeam.$invalid && (newGame.homeTeam.$dirty || newGame.homeTeam.$touched)">The home team name is required.</div>
     </div>
     
-    <button type="submit" class="btn btn-primary btn-lg btn-block" ng-disabled="newGame.$invalid">Start Game</button>
+    <button type="button" class="btn btn-primary btn-lg btn-block" ng-disabled="newGame.$invalid">Next</button>
 </form>
