Removing generic data service and moving into proper feature services.

--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,6 @@
   <script src="lib/ng-sortable.min.js"></script>
   
   <script src="app/core/core.module.js"></script>
-  <script src="app/core/app.data.js"></script>
   <script src="app/core/app.routes.js"></script>
   
   <script src="app/layout/layout.module.js"></script>
@@ -48,8 +47,10 @@
   
   <script src="app/team/team.module.js"></script>
   <script src="app/team/team.controller.js"></script>
+  <script src="app/team/team.service.js"></script>
   
   <script src="app/game/game.module.js"></script>
+  <script src="app/game/game.service.js"></script>
   <script src="app/game/game.controller.js"></script>
   <script src="app/game/new-game.controller.js"></script>
   <script src="app/game/reset-game.controller.js"></script>
